syntax = "proto3";
 
package cliente_logistica;

option go_package = "/cliente_logistica"; 

message EnvioRequest {
    string id = 1; 
	string producto = 2;
	int64 valor = 3;
    string tienda = 4;
    string destino = 5;
    int64 prioritario = 6;
}

message EnvioResponse{
    string msg = 1;
}



message CamionRequest {
    string status = 1;

}

 
message CamionResponse {
    string algo = 1;
}
 
service SeguimientoService {
    rpc Seguimiento (SeguimientoRequest) returns (SeguimientoResponse) {}
}

service EnvioService {
    rpc Envio (EnvioRequest) returns (EnvioResponse) {}
    rpc Camion (stream CamionRequest) returns (stream CamionResponse) {}
  
}